--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,11 +99,16 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #935d8c;
+		background: rgb(100,100,100);
+background: -moz-linear-gradient(243deg, rgba(100,100,100,1) 0%, rgba(255,153,0,1) 20%, rgba(100,100,100,1) 59%, rgba(255,153,0,1) 85%, rgba(100,100,100,1) 100%);
+background: -webkit-linear-gradient(243deg, rgba(100,100,100,1) 0%, rgba(255,153,0,1) 20%, rgba(100,100,100,1) 59%, rgba(255,153,0,1) 85%, rgba(100,100,100,1) 100%);
+background: linear-gradient(243deg, rgba(100,100,100,1) 0%, rgba(255,153,0,1) 20%, rgba(100,100,100,1) 59%, rgba(255,153,0,1) 85%, rgba(100,100,100,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#646464",endColorstr="#646464",GradientType=1);
+		/*background-color: #935d8c;
 		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
 		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
 		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);*/
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -120,7 +125,7 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #935d8c;
+		/*background-color: #935d8c;*/
 		color: rgba(255, 255, 255, 0.65);
 	}
 
