--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -125,8 +125,8 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#646464",endCo
 /* Type */
 
 	body {
-		/*background-color: #935d8c;*/
-		color: rgba(255, 255, 255, 0.65);
+		/*background-color: #935d8c;
+		color: rgba(255, 255, 255, 0.65); */
 	}
 
 	body, input, select, textarea {
