--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,6 +104,7 @@ background: -moz-linear-gradient(243deg, rgba(100,100,100,1) 0%, rgba(255,153,0,
 background: -webkit-linear-gradient(243deg, rgba(100,100,100,1) 0%, rgba(255,153,0,1) 20%, rgba(100,100,100,1) 59%, rgba(255,153,0,1) 85%, rgba(100,100,100,1) 100%);
 background: linear-gradient(243deg, rgba(100,100,100,1) 0%, rgba(255,153,0,1) 20%, rgba(100,100,100,1) 59%, rgba(255,153,0,1) 85%, rgba(100,100,100,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#646464",endColorstr="#646464",GradientType=1);
+	
 		/*background-color: #935d8c;
 		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
 		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
@@ -125,8 +126,8 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#646464",endCo
 /* Type */
 
 	body {
-		/*background-color: #935d8c;
-		color: rgba(255, 255, 255, 0.65); */
+		/*background-color: #935d8c; */
+		color: rgba(255, 255, 255, 0.65); 
 	}
 
 	body, input, select, textarea {
